--- a/.github/workflows/test-docker-compose.yml
+++ b/.github/workflows/test-docker-compose.yml
@@ -5,11 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: get docker compose
-        run: |
-          curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose configs:
-          chmod +x /usr/local/bin/docker-compose
-      - name: Check docker compose
-        run: docker-compose --version
-      - name: Build the stack
-        run: docker-compose up -d
+      - name: Build the Docker image
+        run: docker-compose build
+
+      
