--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.4",
+    "mongoose": "^8.9.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
